# esp-idf-svc-build-failure

./: Cargo.toml  sdkconfig.defaults
src/: main.rs
