[package]
name = "test"
version = "0.1.0"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
log = "0.4"

esp-idf-sys = { version = "0.31.1", features = ["binstart"] }
esp-idf-svc = "0.41.1"
esp-idf-hal = { version = "0.37.2" }
embedded-svc = { version = "0.21" }
embedded-hal = "0.2.7"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
